--- a/honeyted/html/index.html
+++ b/honeyted/html/index.html
@@ -126,7 +126,7 @@
 							<p class="title2 captionDelay2 FromBottom">Project</p>
 							<p class="title4 captionDelay5 FromBottom">Our Senior Project about tracking actions of attackers with Honeypot.</p>
 						</div>
-						<a class="slide_btn FromRight" href="!!google drive link!!">See Our Analysis Report!</a>
+						<a class="slide_btn FromRight" href="https://drive.google.com/file/d/10vgeGQzP_xxQUcu84a6N1I_quk9z_GV4/view?usp=sharing">See Our Analysis Report!</a>
 				</ul>
 			</div>
 			<div id="carousel">
@@ -182,7 +182,7 @@
 							</div>
 							<div class="work_description">
 								<div class="work_descr_cont">
-									<a href="portfolio-post.html" >Project Analysis Report</a>
+									<a href="https://drive.google.com/file/d/10vgeGQzP_xxQUcu84a6N1I_quk9z_GV4/view?usp=sharing" >Project Analysis Report</a>
 								</div>
 							</div>
 						</div>
